# web3auit-mpc-server

./: .gitignore  Dockerfile  LICENSE  OFFLINE_DEPLOYMENT.md  README.md  build-offline.sh  pyproject.toml
src/web3audit_mcp/: __init__.py  dedup.py  models.py  report.py  server.py  source_reader.py
src/web3audit_mcp/detectors/: __init__.py  _solidity_helpers.py  flash_loan.py  oracle_manipulation.py  price_manipulation.py  registry.py  unchecked_low_level.py
src/web3audit_mcp/forge/: __init__.py  runner.py
src/web3audit_mcp/poc/: __init__.py  generator.py  models.py  project_manager.py  strategies.py  templates.py
src/web3audit_mcp/runners/: __init__.py  aderyn.py  base.py  slither.py
